--- a/src/app/design/frontend/base/default/template/germansetup/price_info.phtml
+++ b/src/app/design/frontend/base/default/template/germansetup/price_info.phtml
@@ -1,5 +1,5 @@
 <?php $shippingCostUrl = Mage::helper('germansetup')->getShippingCostUrl() ?>
-<?php if (!empty($shippingCostUrl)): ?>
+<?php if (!empty($shippingCostUrl) && $this->getIsShowShippingLink()): ?>
 	<?php if ($this->getIsIncludingTax() == Mage_Tax_Model_Config::DISPLAY_TYPE_EXCLUDING_TAX): ?>
     	<?php echo $this->__('Excl. %s Tax, plus <a href="%s">Shipping Cost</a>', $this->getFormattedTaxRate(), $shippingCostUrl) ?>
 	<?php elseif ($this->getIsIncludingTax() == Mage_Tax_Model_Config::DISPLAY_TYPE_INCLUDING_TAX): ?>
