[~BUGFIX] Fixed wrong static block in email templates (issue #9)

--- a/src/app/locale/de_DE/template/germansetup/email/creditmemo_update_guest.html
+++ b/src/app/locale/de_DE/template/germansetup/email/creditmemo_update_guest.html
@@ -45,7 +45,7 @@
             <tr><td style="border-bottom:2px solid #eee;">&nbsp;</td></tr>
             <tr>
                 <td style="font:9px/1em Verdana, Arial, Helvetica, sans-serif;">
-                      {{block type="cms/block" block_id="mrg_business_terms"}}
+                      {{block type="cms/block" block_id="gs_business_terms"}}
                 </td>
             </tr>
 	        </table>
