--- a/src/app/locale/de_DE/template/germansetup/email/order_new.html
+++ b/src/app/locale/de_DE/template/germansetup/email/order_new.html
@@ -104,13 +104,13 @@
 					<tr><td style="border-bottom:2px solid #eee;">&nbsp;</td></tr>
 					<tr>
 						<td style="font:9px/1em Verdana, Arial, Helvetica, sans-serif;">
-							{{block type="cms/block" block_id="mrg_revocation"}}
+							{{block type="cms/block" block_id="gs_revocation"}}
 						</td>
 					</tr>
 					<tr><td style="border-bottom:2px solid #eee;">&nbsp;</td></tr>
 					<tr>
 						<td style="font:9px/1em Verdana, Arial, Helvetica, sans-serif;">
-							{{block type="cms/block" block_id="mrg_business_terms"}}
+							{{block type="cms/block" block_id="gs_business_terms"}}
 						</td>
 					</tr>
 				</table>
