--- a/src/app/locale/de_DE/template/germansetup/email/account_new.html
+++ b/src/app/locale/de_DE/template/germansetup/email/account_new.html
@@ -51,7 +51,7 @@
                     </tr>
 					<tr>
 						<td style="font:9px/1em Verdana, Arial, Helvetica, sans-serif;">
-		                    {{block type="cms/block" block_id="mrg_business_terms"}}
+		                    {{block type="cms/block" block_id="gs_business_terms"}}
 		                </td>
 					</tr>
 				</table>
