--- a/src/app/locale/de_DE/template/germansetup/email/account_new_confirmed.html
+++ b/src/app/locale/de_DE/template/germansetup/email/account_new_confirmed.html
@@ -46,7 +46,7 @@
                        </td>
                     </tr>
 					<tr>
-						<td style="font:9px/1em Verdana, Arial, Helvetica, sans-serif;">{{block type="cms/block" block_id="mrg_business_terms"}}</td>
+						<td style="font:9px/1em Verdana, Arial, Helvetica, sans-serif;">{{block type="cms/block" block_id="gs_business_terms"}}</td>
 					</tr>
 				</table>
 			</td>
