[~TASK] Added NoState to list of recommended extension

--- a/src/app/design/adminhtml/default/default/template/germansetup/extensions.phtml
+++ b/src/app/design/adminhtml/default/default/template/germansetup/extensions.phtml
@@ -22,6 +22,17 @@
                     	<td class="value">http://connect20.magentocommerce.com/community/Locale_Mage_community_de_DE</td>
                     </tr>
                     <tr><td colspan="2">&nbsp;</td></tr>
+
+                	<tr><td class="value" colspan="2"><strong>NoState - Bundesland/Kanton entfernen</strong></td></tr>
+                    <tr>
+                    	<td class="label"><label for="name">MagentoConnect</label></td>
+                    	<td class="value"><a href="http://www.magentocommerce.com/extension/8047/" target="_blank">http://www.magentocommerce.com/extension/8047/</a></td>
+                    </tr>
+                    <tr>
+                    	<td class="label"><label for="name">Extension Key</label></td>
+                    	<td class="value">http://connect20.magentocommerce.com/community/Dsdata_NoState</td>
+                    </tr>
+                    <tr><td colspan="2">&nbsp;</td></tr>
 				</tbody>
     		</table>
 		</div>
