--- a/src/app/design/adminhtml/default/default/template/germansetup/form.phtml
+++ b/src/app/design/adminhtml/default/default/template/germansetup/form.phtml
@@ -47,6 +47,21 @@
             	<table cellspacing="0" class="form-list">
             		<tbody>
                     	<tr>
+                        	<td class="label"><label for="select_country"><?php echo $this->__('Shipping from') ?></label></td>
+                        	<td class="value" style="width:160px !important;">
+                            	<select name="country" id="select_country" style="width:150px !important;">
+                            		<option value="de" selected="selected"><?php echo $this->__('Germany')?></option>
+                            		<option value="at"><?php echo $this->__('Austria')?></option>
+                            		<option value="ch"><?php echo $this->__('Switzerland')?></option>
+                            	</select>
+                            </td>
+                            <td class="value">
+                            	<img src="<?php echo $this->getSkinUrl('images/error_msg_icon.gif') ?>" alt="Notification" />
+                                <?php echo $this->__('This setting is base for the tax rate setup!') ?>
+                            </td>
+                        </tr>
+                        <tr><td colspan="3">&nbsp;</td></tr>
+                    	<tr>
                         	<td class="label"><label for="checkbox_cms"><?php echo $this->__('Create CMS Pages and Blocks') ?></label></td>
                         	<td class="value">
                             	<input type="checkbox" name="cms" id="checkbox_cms" value="1" checked="checked" />
@@ -77,7 +92,6 @@
                                 <input type="checkbox" name="tax" id="checkbox_tax" value="1" checked="checked" />
                             </td>
                             <td class="value">
-                                <?php echo $this->__('Shipping from Germany') ?><br />
                                 <img src="<?php echo $this->getSkinUrl('images/error_msg_icon.gif') ?>" alt="Notification" />
                                 <?php echo $this->__('All tax settings will be overwritten!') ?>
                             </td>
