--- a/src/app/design/frontend/base/default/layout/germansetup.xml
+++ b/src/app/design/frontend/base/default/layout/germansetup.xml
@@ -123,12 +123,13 @@ Adding custom product price block
         </reference>
     </catalog_product_view>
 
-<!-- Added Button Loesung -->
+	<!-- Changes for Button Loesung -->
     <checkout_onepage_index>
-        <reference name="root">
+        <reference name="head">
             <action method="addCss"><stylesheet>css/germansetup/checkout.css</stylesheet></action>
         </reference>
     </checkout_onepage_index>
+    
     <checkout_onepage_review>
         <reference name="root">
             <action method="unsetChild"><alias>agreements</alias></action>
