[~FEATURE] Added setup for system config values (fixes #42)

--- a/src/app/design/adminhtml/default/default/template/germansetup/form.phtml
+++ b/src/app/design/adminhtml/default/default/template/germansetup/form.phtml
@@ -62,6 +62,16 @@
                         </tr>
                         <tr><td colspan="3">&nbsp;</td></tr>
                     	<tr>
+                        	<td class="label"><label for="checkbox_systemconfig"><?php echo $this->__('Update System Config Settings') ?></label></td>
+                        	<td class="value">
+                            	<input type="checkbox" name="systemconfig" id="checkbox_systemconfig" value="1" checked="checked" />
+                            </td>
+                            <td class="value">
+                                <?php echo $this->__('i.e. newsletter confirmation, account confirmation, ..') ?>
+                            </td>
+                        </tr>
+                        <tr><td colspan="3">&nbsp;</td></tr>
+                    	<tr>
                         	<td class="label"><label for="checkbox_cms"><?php echo $this->__('Create CMS Pages and Blocks') ?></label></td>
                         	<td class="value">
                             	<input type="checkbox" name="cms" id="checkbox_cms" value="1" checked="checked" />
