--- a/src/app/design/frontend/base/default/layout/germansetup.xml
+++ b/src/app/design/frontend/base/default/layout/germansetup.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0"?>
 <layout version="0.1.0">
 
-<!--
-Adding custom product price block   
--->
-
+	<!--
+	Adding custom product price block   
+	-->
     <catalog_category_default>
         <reference name="product_list">
             <action method="addPriceBlockType"><type>simple</type><block>germansetup/catalog_product_price</block><template>catalog/product/price.phtml</template></action>
@@ -123,7 +122,9 @@ Adding custom product price block
         </reference>
     </catalog_product_view>
 
-	<!-- Changes for Button Loesung -->
+	<!--
+	Changes for Button Loesung
+	-->
     <checkout_onepage_index>
         <reference name="head">
             <action method="addCss"><stylesheet>css/germansetup/checkout.css</stylesheet></action>
@@ -131,6 +132,9 @@ Adding custom product price block
     </checkout_onepage_index>
     
     <checkout_onepage_review>
+		<reference name="checkout.onepage.agreements">
+            <action method="setTemplate"><template>germansetup/checkout/onepage/agreements.phtml</template></action>
+        </reference>
         <reference name="root">
             <action method="unsetChild"><alias>agreements</alias></action>
         </reference>
@@ -141,4 +145,13 @@ Adding custom product price block
             <block type="germansetup/checkout_information" name="checkout.onepage.additional" template="germansetup/checkout/additional.phtml" />
         </reference>
     </checkout_onepage_review>
+    
+    <germansetup_frontend_agreements>
+        <reference name="root">
+            <action method="setTemplate"><template>page/popup.phtml</template></action>
+        </reference>
+        <reference name="content">
+            <block type="core/text" name="agreement" />
+        </reference>
+    </germansetup_frontend_agreements>
 </layout>
