--- a/src/skin/frontend/base/default/css/germansetup/checkout.css
+++ b/src/skin/frontend/base/default/css/germansetup/checkout.css
@@ -15,3 +15,12 @@
 	border-width: 0 1px 1px;
 	text-align: right;
 }
+
+.opc .checkout-agreements li {
+	margin: 10px 0;
+}
+
+.opc .checkout-agreements .agree {
+	padding-top: 0px;
+	padding-bottom: 0px;
+}
