--- a/src/skin/frontend/base/default/css/germansetup/checkout.css
+++ b/src/skin/frontend/base/default/css/germansetup/checkout.css
@@ -16,11 +16,23 @@
 	text-align: right;
 }
 
-.opc .checkout-agreements li {
+.checkout-multishipping-overview .additional-information {
+	margin: 0;
+	padding: 0 10px 25px;
+	text-align: right;
+}
+
+.checkout-multishipping-overview .checkout-agreements {
+	margin-bottom: 25px;
+}
+
+.opc .checkout-agreements li,
+.checkout-multishipping-overview .checkout-agreements li {
 	margin: 10px 0;
 }
 
-.opc .checkout-agreements .agree {
+.opc .checkout-agreements .agree,
+.checkout-multishipping-overview .checkout-agreements .agree {
 	padding-top: 0px;
 	padding-bottom: 0px;
 }
