--- a/src/app/design/adminhtml/default/default/template/germansetup/form.phtml
+++ b/src/app/design/adminhtml/default/default/template/germansetup/form.phtml
@@ -105,7 +105,7 @@
                                     <?php endforeach; ?>
                                 </select>
                             </td>
-                            <td class="value"></td>
+                            <td class="value"><?php echo $this->__('Language Package with Email-Templates') ?></td>
                         </tr>
                         <tr>
                             <td class="label"><label for="checkbox_tax"><?php echo $this->__('Configure Tax') ?></label></td>
