[~TASK] Form translation changes

--- a/src/app/design/adminhtml/default/default/template/germansetup/form.phtml
+++ b/src/app/design/adminhtml/default/default/template/germansetup/form.phtml
@@ -94,10 +94,10 @@
                             <td class="value">
                                 <input type="checkbox" name="email" id="checkbox_email" value="1" checked="checked" />
                             </td>
-                            <td class="value"><?php echo $this->__('German Email Templates') ?></td>
+                            <td class="value"><?php echo $this->__('Create Transational Email Templates to be managed in the Magento admin area') ?></td>
                         </tr>
                         <tr>
-                            <td class="label"><label for="select_email_locale"><?php echo $this->__('Select Locale') ?></label></td>
+                            <td class="label"><label for="select_email_locale">&nbsp;</label></td>
                             <td class="value">
                                 <select name="email_locale" id="select_email_locale">
                                     <?php foreach($this->getLocaleOptions() as $_option): ?>
@@ -105,7 +105,7 @@
                                     <?php endforeach; ?>
                                 </select>
                             </td>
-                            <td class="value"><?php echo $this->__('Language Package with Email-Templates') ?></td>
+                            <td class="value"><?php echo $this->__('Language Package for Email-Templates') ?></td>
                         </tr>
                         <tr>
                             <td class="label"><label for="checkbox_tax"><?php echo $this->__('Configure Tax') ?></label></td>
