--- a/src/app/design/frontend/base/default/template/germansetup/checkout/onepage/agreements.phtml
+++ b/src/app/design/frontend/base/default/template/germansetup/checkout/onepage/agreements.phtml
@@ -49,8 +49,9 @@ $helper = $this->helper('germansetup');
         <p class="agree">
             <?php if($_a->getIsRequired()): ?>
                 <input type="checkbox" id="agreement-<?php echo $_a->getId()?>" name="agreement[<?php echo $_a->getId()?>]" value="1" title="<?php echo $this->htmlEscape($_a->getCheckboxText()) ?>" class="checkbox" />
-            <?php endif; ?>            <label for="agreement-<?php echo $_a->getId()?>"><?php echo $_a->getIsHtml() ? $_a->getCheckboxText() : $this->htmlEscape($_a->getCheckboxText()) ?></label>
-            <a href="#" onclick="window.open('<?php echo $this->getUrl('germansetup/frontend/agreements', array('id' => $_a->getId())) ?>', '', 'width=600,height=600,left=0,top=0,location=no,status=yes,scrollbars=yes,resizable=yes').focus(); return false;"><?php echo $this->__('[Show]') ?></a>
+            <?php endif; ?>
+            <label <?php if($_a->getIsRequired()): ?>for="agreement-<?php echo $_a->getId()?>"<?php endif; ?>><?php echo $_a->getIsHtml() ? $_a->getCheckboxText() : $this->htmlEscape($_a->getCheckboxText()) ?></label>
+            <a href="<?php echo $helper->getAgreementUrl($_a) ?>" onclick="window.open(this.href, '', 'width=600,height=600,left=0,top=0,location=no,status=yes,scrollbars=yes,resizable=yes').focus(); return false;"><?php echo $this->__('[Show]') ?></a>
         </p>
     </li>
 <?php endforeach ?>
