--- a/src/app/design/frontend/base/default/template/germansetup/imprint/communication.phtml
+++ b/src/app/design/frontend/base/default/template/germansetup/imprint/communication.phtml
@@ -33,6 +33,6 @@
 <?php echo $this->__('Fax') ?>: <?php echo $this->getFax() ?><br />
 <?php endif ?>
 <?php if (strlen(trim($this->getWeb()))): ?>
-<?php echo $this->__('Web') ?>: <a href="http://<?php echo $this->getWeb() ?>" title="<?php echo $this->getCompanyFirst() ?>"><?php echo $this->getWeb() ?></a><br />
+<?php echo $this->__('Web') ?>: <a href="<?php echo $this->getWeb(true) ?>" title="<?php echo $this->getCompanyFirst() ?>"><?php echo $this->getWeb() ?></a><br />
 <?php endif ?>
 <?php echo $this->__('E-Mail') ?>: <a href="mailto:<?php echo $this->getEmail() ?>" title="<?php echo $this->getCompanyFirst() ?>"><?php echo $this->getEmail() ?></a>
