--- a/src/app/design/frontend/base/default/template/germansetup/imprint/legal.phtml
+++ b/src/app/design/frontend/base/default/template/germansetup/imprint/legal.phtml
@@ -23,6 +23,7 @@
 ?>
 <?php
 /**
+ * @var $this FireGento_GermanSetup_Block_Imprint_Content
  * @see FireGento_GermanSetup_Block_Imprint_Content
  */
 ?>
@@ -31,6 +32,11 @@
 <?php endif ?>
 <?php if (strlen(trim($this->getOwner()))): ?>
     <?php echo $this->__('Owner') ?>: <?php echo $this->getOwner() ?><br />
+<?php endif ?>
+<?php if (strlen(trim($this->getVatId()))): ?>
+    <?php echo $this->__('VAT-ID') ?>: <?php echo $this->getVatId() ?><br />
+<?php elseif (strlen(trim($this->getTaxNumber()))): ?>
+    <?php echo $this->__('Tax number') ?>: <?php echo $this->getTaxNumber() ?><br />
 <?php endif ?>
 <?php if (strlen(trim($this->getCourt()))): ?>
     <?php echo $this->__('Register court') ?>: <?php echo $this->getCourt() ?><br />
