--- a/src/app/design/frontend/base/default/layout/germansetup.xml
+++ b/src/app/design/frontend/base/default/layout/germansetup.xml
@@ -177,11 +177,8 @@
     <!-- Customer Terms and Condition Confirmation -->
     <customer_account_create>
         <reference name="form.additional.info">
-            <block type="checkout/agreements" name="customer.tc-confirmation"
+            <block type="germansetup/customer_account_agreements" name="customer.tc-confirmation"
                    template="germansetup/customer/form/tc-confirmation.phtml"/>
-        </reference>
-        <reference name="form.additional.info">
-            <action method="unsetChild" ifconfig="customer/create_account/avoid_tc"><value>customer.tc-confirmation</value></action>
         </reference>
     </customer_account_create>
 </layout>
