--- a/src/app/design/frontend/base/default/template/germansetup/customer/form/tc-confirmation.phtml
+++ b/src/app/design/frontend/base/default/template/germansetup/customer/form/tc-confirmation.phtml
@@ -42,9 +42,8 @@ $helper = $this->helper( 'germansetup' );
 
 <?php if( !$this->getAgreements() ) return; ?>
 
-<hr style="border:none; height:20px;"/>
-
 <?php foreach( $this->getAgreements() as $_a ): ?>
+<li class="control">
     <p class="agree">
         <?php if( $_a->getIsRequired() ): ?>
             <input type="checkbox" id="agreement-<?php echo $_a->getId()?>" name="agreement[<?php echo $_a->getId()?>]" value="1" title="<?php echo $this->htmlEscape( $_a->getCheckboxText() ) ?>" class="checkbox required-entry"/>
@@ -52,4 +51,5 @@ $helper = $this->helper( 'germansetup' );
         <label <?php if( $_a->getIsRequired() ): ?>for="agreement-<?php echo $_a->getId()?>"<?php endif; ?> style="float:none;"><?php echo $_a->getIsHtml() ? $_a->getCheckboxText() : $this->htmlEscape( $_a->getCheckboxText() ) ?></label>
         <a href="<?php echo $helper->getAgreementUrl( $_a ) ?>" onclick="window.open(this.href, '', 'width=600,height=600,left=0,top=0,location=no,status=yes,scrollbars=yes,resizable=yes').focus(); return false;"><?php echo $this->__( '[Show]' ) ?></a>
     </p>
+</li>
 <?php endforeach ?>
