--- a/src/app/design/frontend/base/default/template/germansetup/price_info.phtml
+++ b/src/app/design/frontend/base/default/template/germansetup/price_info.phtml
@@ -51,6 +51,12 @@
         <?php else: ?>
             <span class="tax-details"><?php echo $this->__( 'Incl. %s Tax', $this->getFormattedTaxRate() ) ?><span class="tax-separator">, </span><span class="shipping-cost-details"><?php echo $this->__( 'excl. <a href="%s">Shipping Cost</a>', $shippingCostUrl ) ?></span>
         <?php endif ?>
+    <?php elseif( $this->getIsIncludingTax() == Mage_Tax_Model_Config::DISPLAY_TYPE_BOTH ): ?>
+        <?php if( $this->getIsIncludingShippingCosts() ): ?>
+            <span class="tax-details"><?php echo $this->__('incl. <a href="%s">Shipping Cost</a>', $shippingCostUrl) ?></span>
+        <?php else: ?>
+            <span class="tax-details"><?php echo $this->__('excl. <a href="%s">Shipping Cost</a>', $shippingCostUrl) ?></span>
+        <?php endif ?>
     <?php endif ?>
 <?php else: ?>
     <?php if( $this->getIsIncludingTax() == Mage_Tax_Model_Config::DISPLAY_TYPE_EXCLUDING_TAX ): ?>
