--- a/src/app/design/adminhtml/default/default/template/germansetup/extensions.phtml
+++ b/src/app/design/adminhtml/default/default/template/germansetup/extensions.phtml
@@ -15,7 +15,7 @@
                     <tr><td class="value" colspan="2"><strong>Deutsches Sprachpaket</strong></td></tr>
                     <tr>
                         <td class="label"><label for="name">MagentoConnect</label></td>
-                        <td class="value"><a href="http://www.magentocommerce.com/extension/413/" target="_blank">http://www.magentocommerce.com/extension/413/</a></td>
+                        <td class="value"><a href="http://www.magentocommerce.com/magento-connect/catalog/product/view/id/2317/" target="_blank">http://www.magentocommerce.com/magento-connect/catalog/product/view/id/2317/</a></td>
                     </tr>
                     <tr>
                         <td class="label"><label for="name">Extension Key</label></td>
@@ -26,7 +26,7 @@
                     <tr><td class="value" colspan="2"><strong>NoState - Bundesland/Kanton entfernen</strong></td></tr>
                     <tr>
                         <td class="label"><label for="name">MagentoConnect</label></td>
-                        <td class="value"><a href="http://www.magentocommerce.com/extension/8047/" target="_blank">http://www.magentocommerce.com/extension/8047/</a></td>
+                        <td class="value"><a href="http://www.magentocommerce.com/magento-connect/catalog/product/view/id/9971/" target="_blank">http://www.magentocommerce.com/magento-connect/catalog/product/view/id/9971/</a></td>
                     </tr>
                     <tr>
                         <td class="label"><label for="name">Extension Key</label></td>
@@ -51,7 +51,7 @@
                     <tr><td class="value" colspan="2"><strong>Bankeinzug/Lastschrift</strong></td></tr>
                     <tr>
                         <td class="label"><label for="name">MagentoConnect</label></td>
-                        <td class="value"><a href="http://www.magentocommerce.com/extension/676/" target="_blank">http://www.magentocommerce.com/extension/676/</a></td>
+                        <td class="value"><a href="http://www.magentocommerce.com/magento-connect/catalog/product/view/id/2606/" target="_blank">http://www.magentocommerce.com/magento-connect/catalog/product/view/id/2606/</a></td>
                     </tr>
                     <tr>
                         <td class="label"><label for="name">Extension Key</label></td>
@@ -62,7 +62,7 @@
                     <tr><td class="value" colspan="2"><strong>Nachnahme</strong></td></tr>
                     <tr>
                         <td class="label"><label for="name">MagentoConnect</label></td>
-                        <td class="value"><a href="http://www.magentocommerce.com/extension/454/" target="_blank">http://www.magentocommerce.com/extension/454/</a></td>
+                        <td class="value"><a href="http://www.magentocommerce.com/magento-connect/catalog/product/view/id/2360/" target="_blank">http://www.magentocommerce.com/magento-connect/catalog/product/view/id/2360/</a></td>
                     </tr>
                     <tr>
                         <td class="label"><label for="name">Extension Key</label></td>
@@ -73,7 +73,7 @@
                     <tr><td class="value" colspan="2"><strong>Vorkasse</strong></td></tr>
                     <tr>
                         <td class="label"><label for="name">MagentoConnect</label></td>
-                        <td class="value"><a href="http://www.magentocommerce.com/extension/304/" target="_blank">http://www.magentocommerce.com/extension/304/</a></td>
+                        <td class="value"><a href="http://www.magentocommerce.com/magento-connect/catalog/product/view/id/2298/" target="_blank">http://www.magentocommerce.com/magento-connect/catalog/product/view/id/2298/</a></td>
                     </tr>
                     <tr>
                         <td class="label"><label for="name">Extension Key</label></td>
