--- a/src/app/design/adminhtml/default/default/template/germansetup/extensions.phtml
+++ b/src/app/design/adminhtml/default/default/template/germansetup/extensions.phtml
@@ -34,6 +34,17 @@
                     </tr>
                     <tr><td colspan="2">&nbsp;</td></tr>
 
+                    <tr><td class="value" colspan="2"><strong>Grundpreis-Modul (PAngV)</strong></td></tr>
+                    <tr>
+                        <td class="label"><label for="name">MagentoConnect</label></td>
+                        <td class="value"><a href="http://www.magentocommerce.com/magento-connect/catalog/product/view/id/2897/" target="_blank">http://www.magentocommerce.com/magento-connect/catalog/product/view/id/2897/</a></td>
+                    </tr>
+                    <tr>
+                        <td class="label"><label for="name">Extension Key</label></td>
+                        <td class="value">http://connect20.magentocommerce.com/community/DerModPro_BasePrice</td>
+                    </tr>
+                    <tr><td colspan="2">&nbsp;</td></tr>
+
                     <tr><td class="value" colspan="2"><strong>Newsletter Abmeldung als Gast und Double Opt-In für registrierte Kunden</strong></td></tr>
                     <tr>
                         <td class="label"><label for="name">MagentoConnect</label></td>
