--- a/src/app/design/adminhtml/default/default/template/germansetup/extensions.phtml
+++ b/src/app/design/adminhtml/default/default/template/germansetup/extensions.phtml
@@ -91,6 +91,17 @@
                         <td class="value">http://connect20.magentocommerce.com/community/BankPayment</td>
                     </tr>
                     <tr><td colspan="2">&nbsp;</td></tr>
+
+                    <tr><td class="value" colspan="2"><strong>Rechnung</strong></td></tr>
+                    <tr>
+                        <td class="label"><label for="name">MagentoConnect</label></td>
+                        <td class="value"><a href="http://www.magentocommerce.com/magento-connect/catalog/product/view/id/17239/s/invoice-6810/" target="_blank">http://www.magentocommerce.com/magento-connect/catalog/product/view/id/17239/s/invoice-6810/</a></td>
+                    </tr>
+                    <tr>
+                        <td class="label"><label for="name">Extension Key</label></td>
+                        <td class="value">http://connect20.magentocommerce.com/community/InvoicePayment</td>
+                    </tr>
+                    <tr><td colspan="2">&nbsp;</td></tr>
                 </tbody>
             </table>
         </div>
