--- a/src/app/design/frontend/base/default/template/germansetup/checkout/onepage/agreements.phtml
+++ b/src/app/design/frontend/base/default/template/germansetup/checkout/onepage/agreements.phtml
@@ -26,7 +26,7 @@
  * @category  FireGento
  * @package   FireGento_GermanSetup
  * @author    FireGento Team <team@firegento.com>
- * @copyright 2012 FireGento Team (http://www.firegento.de). All rights served.
+ * @copyright 2013 FireGento Team (http://www.firegento.de). All rights served.
  * @license   http://opensource.org/licenses/gpl-3.0 GNU General Public License, version 3 (GPLv3)
  * @version   $Id:$
  * @since     0.1.0
@@ -36,22 +36,25 @@
  * @var $this Mage_Checkout_Block_Agreements
  */
 
-/* @var $helper FireGento_GermanSetup_Helper_Data */
-$helper = $this->helper('germansetup');
+$agreements = $this->getAgreements()
+    ->addFieldToFilter('agreement_type', array('in' => array(
+        FireGento_GermanSetup_Model_Source_AgreementType::AGREEMENT_TYPE_CHECKOUT,
+        FireGento_GermanSetup_Model_Source_AgreementType::AGREEMENT_TYPE_BOTH,
+    )));
 ?>
 
-<?php if (!$this->getAgreements()) return; ?>
+<?php if (!$agreements) return; ?>
 
 <form action="" id="checkout-agreements" onsubmit="return false;">
 <ol class="checkout-agreements">
-<?php foreach ($this->getAgreements() as $_a): ?>
+<?php foreach ($agreements as $agreement): ?>
     <li>
         <p class="agree">
-            <?php if($_a->getIsRequired()): ?>
-                <input type="checkbox" id="agreement-<?php echo $_a->getId()?>" name="agreement[<?php echo $_a->getId()?>]" value="1" title="<?php echo $this->htmlEscape($_a->getCheckboxText()) ?>" class="checkbox" />
+            <?php if($agreement->getIsRequired()): ?>
+                <input type="checkbox" id="agreement-<?php echo $agreement->getId()?>" name="agreement[<?php echo $agreement->getId()?>]" value="1" title="<?php echo $this->htmlEscape($agreement->getCheckboxText()) ?>" class="checkbox" />
             <?php endif; ?>
-            <label <?php if($_a->getIsRequired()): ?>for="agreement-<?php echo $_a->getId()?>"<?php endif; ?>><?php echo $_a->getIsHtml() ? $_a->getCheckboxText() : $this->htmlEscape($_a->getCheckboxText()) ?></label>
-            <a href="<?php echo $helper->getAgreementUrl($_a) ?>" onclick="window.open(this.href, '', 'width=600,height=600,left=0,top=0,location=no,status=yes,scrollbars=yes,resizable=yes').focus(); return false;"><?php echo $this->__('[Show]') ?></a>
+            <label <?php if($agreement->getIsRequired()): ?>for="agreement-<?php echo $agreement->getId()?>"<?php endif; ?>><?php echo $agreement->getIsHtml() ? $agreement->getCheckboxText() : $this->escapeHtml($agreement->getCheckboxText()) ?></label>
+            <a href="<?php echo $helper->getAgreementUrl($agreement) ?>" onclick="window.open(this.href, '', 'width=600,height=600,left=0,top=0,location=no,status=yes,scrollbars=yes,resizable=yes').focus(); return false;"><?php echo $this->__('[Show]') ?></a>
         </p>
     </li>
 <?php endforeach ?>
